--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 </head>
   <body>
-    <h1>Ola mundo GIT</h1>
+    <script type="text/javascript" src="view/login.html" ></script>  <script  ></script>
       
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
